<resources>
    <string name="app_name">Messenger</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="main">Main</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>

    <string name="user_avatar">User Avatar</string>
    <string name="username">Username</string>
    <string name="profession">Profession</string>

    <string name="_12_15">12:15</string>
    <string name="message">Message</string>

    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="what_i_do">What I do</string>

    <string name="sign_up">SIGN UP</string>
    <string name="not_registered">Not registered?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="time">time</string>
    <string name="update">Update</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="name">Name</string>
</resources>