<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/user_info_vertical_margin"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/user_info_horizontal_padding">

    <ImageView
        android:id="@+id/user_info_avatar"
        android:layout_width="@dimen/avatar_image_dimen"
        android:layout_height="@dimen/avatar_image_dimen"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/avatar_image_placeholder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/user_info_margin_start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_info_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/user_info_name_text_size" />

        <TextView
            android:id="@+id/user_info_profession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profession"
            android:textSize="@dimen/user_info_profession_text_size" />

    </LinearLayout>


</LinearLayout>