<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/loginAvatar"
        android:layout_width="@dimen/auth_image_dimen"
        android:layout_height="@dimen/auth_image_dimen"
        android:layout_marginTop="@dimen/auth_image_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar_image_placeholder" />

    <EditText
        android:id="@+id/editTextTextLoginNickname"
        android:layout_marginTop="@dimen/high_margin"
        android:hint="@string/enter_your_nickname"
        style="@style/authEditTextStyle"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAvatar" />

    <EditText
        android:id="@+id/editTextTextLoginPassword"
        android:layout_marginTop="@dimen/low_margin"
        android:hint="@string/enter_your_password"
        style="@style/authEditTextStyle"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextLoginNickname" />

    <TextView
        android:id="@+id/notRegisteredText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/low_margin"
        android:text="@string/not_registered"
        android:textSize="@dimen/not_registered_text_size"
        app:layout_constraintBottom_toTopOf="@+id/loginSignUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginSignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/low_margin"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up"
        android:onClick="signUpButtonClicked"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/high_text_size"
        android:paddingVertical="@dimen/sign_up_padding"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/sign_in"
        android:textSize="@dimen/high_text_size"
        android:onClick="loginButtonClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextLoginPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>