<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.fragments.ProfileFragment">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="@dimen/profile_image_dimen"
        android:layout_height="@dimen/profile_image_dimen"
        android:layout_marginBottom="@dimen/high_margin"
        android:onClick="photoClicked"
        android:src="@drawable/avatar_image_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextProfileName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        android:text="@string/update"
        android:onClick="updateButtonClicked"
        android:textSize="@dimen/high_text_size"
        app:layout_constraintBottom_toTopOf="@+id/signOutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signOutButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor = "@color/dark_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/profile_page_bottom_padding"
        android:backgroundTint="@color/white"
        android:text="@string/sign_out"
        android:onClick="signOutButtonClicked"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/high_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextProfileName"
        style="@style/authEditTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextProfileProfession"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextProfileProfession"
        style="@style/authEditTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/high_margin"
        android:inputType="textPersonName"
        android:text="@string/profession"
        app:layout_constraintBottom_toTopOf="@+id/updateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>