<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/chat_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="75dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/chat_appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_height"

            android:paddingVertical="@dimen/toolbar_padding">

            <!-- TODO: collapsing toolbar not working properly -->
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/toolbar_padding"

                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/chat_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="@dimen/chat_username_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/chat_user_profession"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profession"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="@dimen/chat_profession_text_size" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/chat_user_avatar"
                    android:layout_width="@dimen/chat_image_dimen"
                    android:layout_height="@dimen/chat_image_dimen"
                    android:layout_gravity="bottom|end"
                    android:contentDescription="@string/user_avatar"
                    android:src="@drawable/avatar_image_placeholder" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/chat_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"

                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_arrow_back" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/recyclerview_padding"

            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:stackFromEnd="true" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/chat_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/chat_input_horizontal_padding"
        android:layout_marginBottom="@dimen/chat_input_bottom_padding"
        android:hint="@string/message"

        app:boxBackgroundColor="@color/gray"

        app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/box_corner_radius"

        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"

        app:endIconContentDescription="@string/message"
        app:endIconDrawable="@drawable/ic_check_circle"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/chat_input_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/chat_edit_text_padding" />

    </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>